# meeting_minutes_ai_generator

./: .env.example  .gitignore  Thesis_SYSTEM.ipynb  colab.ipynb  interface.py  main.py  pyproject.toml
evaluation/: whisper_transcription_audio1.py  whisper_transcription_audio2.py  whisper_transcription_audio3.py
src/: act_downloadable.py  const.py  constants.py  generator.py  interface.py  jsonvalidator.py  main.py  schema.py  settings.py  splitter.py  style.py  transcriber.py
src/lib/: mock.py  pdf.py
src/lib/ai/: asr.py  llm.py
src/utils/: pdf.py  splitter.py
src/utils/ai/: asr.py  llm.py
tests/: test_unit_generator.py  test_unit_transcriber.py
