[project]
name = "system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.4.0",
    "ffmpeg>=1.4",
    "gradio>=5.20.1",
    "jupyter>=1.1.1",
    "langchain>=0.3.20",
    "openai-whisper>=20240930",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "transformers>=4.49.0",
]
