[project]
name = "system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.4.0",
    "ffmpeg==1.4",
    "fpdf2>=2.8.2",
    "gradio==5.20.1",
    "jupyter==1.1.1",
    "langchain==0.3.20",
    "openai==1.72.0",
    "openai-whisper==20240930",
    "pydantic==2.10.6",
    "pylance==0.25.1",
    "python-dotenv==1.1.0",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "transformers==4.49.0",
    "vllm==0.8.1",
]

