[project]
name = "meeting_minutes"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg==1.4",
    "fpdf2==2.8.2",
    "gradio==5.21.0",
    "langchain==0.3.20",
    "librosa==0.11.0",
    "openai-whisper==20240930",
    "pydantic==2.10.6",
    "python-dotenv==1.1.0",
    "vllm==0.8.5",
]

[dependency-groups]
dev = [
    "openai==1.72.0",
    "pytest==8.3.5",
]

[project.scripts]
main = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/lib",
]
